# Novo_PNCP

./: .gitignore  README.md  main.py  pyproject.toml
Asset-Manager/: main.py
backend/: README.md  __init__.py  main.py  pyproject.toml
backend/api_client/: __init__.py  pncp_client.py
backend/config/: __init__.py  settings.py
backend/export/: __init__.py  exporter.py  normalizer.py
backend/scheduler/: __init__.py  job.py
backend/scripts/: __init__.py  check_edital_item_id_consistency.py  clean_data.py  count_numeroControlePNCP.py  create_user.py  fetch_recent_editais.py  fix_itens_keys.py  force_fetch_items.py  set_admin.py  update_if_first_time_today.py  view_users_db.py
backend/scripts/data/: analyze_missing_editais.py  audit_data.py  check_chave_composta_duplicada.py  check_edital_id_duplicates.py  check_edital_item_id_consistency.py  check_edital_item_link_consistency.py  clean_data.py  count_editais_itens.py  count_numeroControlePNCP.py  diagnose_itens.py  fetch_missing_items.py  filter_editais_by_publication_date.py  fix_edital_ids.py  fix_itens_keys.py  generate_edital_unique_ids_absolute.py  propaga_id_c_pncp_para_editais.py  remove_edital_ids.py  remove_expired_editais.py  restore_backup.py  restore_editais_backup.py  restore_itens_backup.py  validate_data.py
backend/scripts/fetch/: fetch_items_for_editais_without_items.py  fetch_recent_editais.py  force_fetch_items.py  manual_fetch_editais.py  update_if_first_time_today.py
backend/scripts/user/: create_user.py  set_admin.py  view_users_db.py
backend/services/: __init__.py  contratos_service.py  editais_service.py  itens_service.py
backend/storage/: __init__.py  auth_db.py  data_manager.py
backend/tests/: test_auth_db.py  test_data_manager.py
backend/tests/auth/: test_auth_db.py
backend/web/: __init__.py  app.py  clerk_auth.py
(+73 files in other folders)
